# t2

./: .gitignore  README.md  meson.build  meson_options.txt  sourceglobber.py
.github/actions/upload-artifact/: action.yml
.github/workflows/: ios_builds.yml  javascript_builds.yml  linux_builds.yml  macos_builds.yml  windows_builds.yml
core/: meson.build
core/input/: meson.build
core/io/: meson.build
core/object/: make_virtuals.py  meson.build
core/variant/: variant.h  variant_construct.cpp
drivers/: meson.build
drivers/png/: meson.build
drivers/unix/: meson.build
drivers/vulkan/: meson.build  rendering_device_vulkan.cpp
drivers/xaudio2/: meson.build
editor/: meson.build
editor/debugger/: meson.build
editor/import/: meson.build
editor/plugins/: meson.build
main/: main.cpp  meson.build
misc/scripts/: clang_format.sh
modules/: meson.build
modules/basis_universal/: meson.build
modules/bmp/: meson.build
modules/bullet/: config.py  meson.build
modules/csg/: config.py  meson.build
modules/cvtt/: config.py  meson.build
modules/dds/: meson.build
modules/denoise/: meson.build
modules/enet/: config.py  meson.build
modules/etc/: meson.build
modules/fbx/: meson.build
modules/gdnative/: config.py  meson.build
modules/gdnative/include/: meson.build
modules/gdnative/nativescript/: meson.build
modules/gdnative/net/: meson.build
modules/gdnative/pluginscript/: meson.build
modules/gdnative/scripts/: gdnative_api_struct_gen.py
modules/gdscript/: config.py  meson.build
modules/glslang/: config.py  meson.build
modules/gltf/: config.py  meson.build
modules/gridmap/: config.py  meson.build
modules/hdr/: config.py  meson.build
modules/icloud/: meson.build
modules/jpg/: config.py  meson.build
modules/jsonrpc/: config.py  meson.build
modules/lightmapper_rd/: config.py  meson.build
modules/mbedtls/: config.py  meson.build
modules/meshoptimizer/: config.py  meson.build
modules/minimp3/: config.py  meson.build
modules/mobile_vr/: config.py  meson.build
modules/msdfgen/: config.py
modules/navigation/: config.py  meson.build
modules/ogg/: config.py  meson.build  register_types.h
modules/opensimplex/: meson.build
modules/pvr/: config.py  meson.build
modules/raycast/: config.py
modules/regex/: config.py  meson.build
modules/squish/: config.py  meson.build
modules/svg/: config.py  meson.build
modules/text_server_adv/: config.py  meson.build  text_server_adv.cpp  text_server_adv.h
modules/text_server_adv/icu_data/: meson.build
modules/text_server_fb/: config.py  meson.build
modules/tga/: config.py  meson.build
modules/theora/: config.py  meson.build
modules/tinyexr/: config.py  meson.build
modules/upnp/: config.py  meson.build
modules/vhacd/: config.py  meson.build
modules/visual_script/: config.py  meson.build
modules/vorbis/: config.py  meson.build  register_types.h
modules/webm/: config.py
modules/webp/: config.py  meson.build
modules/webrtc/: config.py  meson.build
modules/websocket/: config.py  meson.build
modules/webxr/: config.py  meson.build
modules/xatlas_unwrap/: config.py  meson.build
platform/android/export/: export_plugin.h
platform/iphone/export/: export_plugin.h
platform/javascript/export/: export_plugin.h
platform/linuxbsd/: display_server_x11.h
platform/windows/: crash_handler_windows.cpp
scene/: meson.build
scene/3d/: meson.build
scene/gui/: gradient_edit.h
scene/resources/: meson.build
scene/resources/default_theme/: default_theme_builders.py  meson.build
scripts/: meson.build  module_db.py
servers/: meson.build
servers/audio/: meson.build
servers/physics_3d/: meson.build
servers/rendering/: meson.build
servers/rendering/renderer_rd/: meson.build
servers/rendering/renderer_rd/shaders/: meson.build
splash/: meson.build
